--- a/Android/Debug/MyDeed/AndroidManifest.xml
+++ b/Android/Debug/MyDeed/AndroidManifest.xml
@@ -18,14 +18,15 @@
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <application android:persistent="False" 
+    <application android:hardwareAccelerated="true"
+        android:persistent="False" 
         android:restoreAnyVersion="False" 
         android:label="MyDeed" 
         android:installLocation="preferExternal" 
         android:debuggable="True" 
         android:largeHeap="False"
         android:icon="@drawable/ic_launcher"
-        android:theme="@android:style/Theme.NoTitleBar">
+        android:theme="@style/AppTheme">
         <!-- Our activity is a subclass of the built-in NativeActivity framework class.
              This will take care of integrating with our NDK code. -->
         <activity android:name="com.embarcadero.firemonkey.FMXNativeActivity"
